# mecanum_supermarket

./: CMakeLists.txt  README.md  package.xml  product_detector.py  requirements.txt  robot_manager.py  test_robot_control.py
config/: mecanum_ros2_control.yaml  nav2_params.yaml  slam_params.yaml  slam_toolbox_params.yaml
launch/: full_system_launch.py  mapping_launch.py  mecanum_gazebo.launch.py  nav2_launch.py  train_ppo.launch.py
maps/: supermarket_map.pgm  supermarket_map.yaml
scripts/: create_map.py  supermarket_map.pgm  train_ppo.py
src/mecanum_rl_description/: __init__.py  environment.py  product_detector.py  robot_manager.py  trainer.py
urdf/: mecanum.urdf.xacro  mecanum_amr.urdf
web_ui/: app.py
web_ui/templates/: index.html
worlds/: empty_mecanum.world  supermarket.world
